--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# dlib é uma dependência do face-recognition e pode dar erro na instalação se você não tiver compiladores e CMake no seu sistema. No Windows, geralmente precisa do Visual Studio Build Tools.
 opencv-python==4.7.0.72
 opencv-contrib-python==4.7.0.72
 face-recognition==1.3.0
